Chunk splitter never splits if more than 8192 split points are found

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • v5.2, v5.0, v4.4, v4.2
    • Sharding EMEA 2022-02-21
    • 49
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When splitting a chunk, if the shard keys are sufficiently small and the number of documents is really high, it may happen the following:

      As a result, huge chunks will never be split, unless some smaller chunk is manually created.

      This problem can also impact shardCollection: when sharding an existing non-empty collection in presence of zones for such collection, the SingleChunkOnPrimarySplitPolicy is applied. There will only be one gigantic chunk on the primary shard that is then expected to be split by the chunk splitter.

            Assignee:
            Paolo Polato
            Reporter:
            Pierlauro Sciarelli
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: