SERVER-63203 Do not fail chunk split if more than 8192 points are requested